# fragus

./: .gitignore  GETTING_STARTED.md  README.md  config.toml  pyproject.toml
configs/: chunker.yaml
docs/: chunking.md  collection-fermi.md  conversion-benchmark.md  convert-pipeline.md  milvus-collection.md  rag_eval_howto.md  rag_runs_catalog.md  reranking.md  run_analysis.md  run_analysis_graph.md  target-pipeline.md
fermi_server/: README.md  fermi_server.py
reranker_server/: README.md  install_launchd.sh  reranker_server.py  run_server.sh  run_tunnel.sh
reranker_server/launchd/: com.cleyrop.reranker.server.plist  com.cleyrop.reranker.tunnel.plist
scripts/diagnostics/: diagnose_zero_pages.py  probe_convert.py  recover_orphan_tasks.py  repair_doc.py
scripts/inspect/: av_audit.py  chunk_stats.py  explore_chunks.py  explore_manifest.py  milvus_recap.py  view_chunks.py  view_duplicates.py  view_parsed.py  visualize_chunks.py
scripts/ops/: browse.py  keepalive_cleyrop.py  refresh_token_daemon.py  test_llm.py  test_milvus.py
scripts/pipeline/: _docling_client.py  brute_corpus.py  build_fragus_collection.py  build_manifest_fragus_clean.py  chunk_corpus.py  convert_corpus.py  embed_corpus.py  embed_fermi.py
scripts/rag/: config.toml  graph_rag_pipeline.py  hybrid_rag_pipeline.py
scripts/rag_evaluation/: compare_rag_runs.py  prepare_eval_dataset.py  prepare_eval_dataset_graph.py  rag_evaluation.py
scripts/rag_evaluation/data/: README.md
