[project]
name = "fragus"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cleyrop-sdk>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.2.0",
    "pymilvus>=2.4.0",
    "pymilvus-model>=0.3.2",
    "nltk>=3.9.1",
    "docling>=2.90.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "cryptography>=3.1",
    "pymupdf4llm>=0.0.17",
    # torch declared explicitly to force the CPU variant (see tool.uv.sources):
    # without a direct declaration the source does not apply to transitive deps (docling).
    "torch",
    "torchvision",
    # cross-encoder reranking (scripts/rag/hybrid_rag_pipeline.py, graph_rag_pipeline.py)
    "sentence-transformers>=5.5.1",
    "ipykernel>=7.2.0",
]

[project.optional-dependencies]
graph = [
    "neo4j>=6.2.0",
    "neo4j-graphrag>=1.18.0",
]
eval = [
    "ragas>=0.4.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "nest-asyncio>=1.5",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "cleyrop_sdk_gitlab"
url = "https://gitlab.com/api/v4/projects/79823225/packages/pypi/simple"
explicit = true
authenticate = "always"

# No GPU on the target VM: CPU torch (avoids ~3.5 GB of useless CUDA/NVIDIA libs)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
cleyrop-sdk = { index = "cleyrop_sdk_gitlab" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
