[project]
name = "fragus-iago"
version = "0.1.0"
requires-python = ">=3.13,<3.14"
dependencies = [
    "cleyrop-sdk>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.2.0",
    "pymilvus>=2.4.0",
    "pymilvus-model>=0.3.2",
    "nltk>=3.9.1",
    "docling>=2.90.0",
    "pyyaml>=6.0",
    "pypdf>=4.0",
    "cryptography>=3.1",
    "pymupdf4llm>=0.0.17",
    # torch déclaré explicitement pour forcer la variante CPU (cf. tool.uv.sources) :
    # sans déclaration directe, la source ne s'applique pas aux deps transitives (docling).
    "torch",
    "torchvision",
    # reranker bench CPU (scripts/inspect/bench_reranker_cpu.py)
    "sentence-transformers>=5.5.1",
    "ipykernel>=7.2.0",
    "neo4j>=6.2.0",
    "neo4j-graphrag>=1.18.0",
    "ragas>=0.4.3",
]

[project.optional-dependencies]
graph = [
    "neo4j>=5.0",
    "neo4j-graphrag>=1.0",
]
eval = [
    "ragas>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "nest-asyncio>=1.5",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "cleyrop_sdk_gitlab"
url = "https://gitlab.com/api/v4/projects/79823225/packages/pypi/simple"
explicit = true
authenticate = "always"

# Pas de GPU sur cette VM : torch CPU (évite ~3,5 Go de libs CUDA/NVIDIA inutiles)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
cleyrop-sdk = { index = "cleyrop_sdk_gitlab" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
